kube-system/intel-gpu-plugin.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: intel-gpu-plugin
  namespace: kube-system
  labels:
    app: intel-gpu-plugin
spec:
  selector:
    matchLabels:
      app: intel-gpu-plugin
  template:
    metadata:
      labels:
        app: intel-gpu-plugin
    spec:
      nodeSelector:
        iGPU: "true"
      containers:
        - name: intel-gpu-plugin
          image: intel/intel-gpu-plugin:0.19.0
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: devfs
              mountPath: /dev/dri
              readOnly: true
            - name: sysfs
              mountPath: /sys/class/drm
              readOnly: true
            - name: kubeletsockets
              mountPath: /var/lib/kubelet/device-plugins
      volumes:
        - name: devfs
          hostPath:
            path: /dev/dri
        - name: sysfs
          hostPath:
            path: /sys/class/drm
        - name: kubeletsockets
          hostPath:
            path: /var/lib/kubelet/device-plugins
